# mkdirs

./: CMakeLists.txt  dir_list.txt
src/: main.cpp
test/: test_logic.cpp  test_main.cpp
